# mpi_test

./: .gitignore  CMakeLists.txt  README.md  main.f90  makefile  mpiinfo.f90  pyproject.toml  test.py  worker.f90
.github/workflows/: main.yml
recipe/: meta.yaml
src/: bloch_cgeev_mkl.F90  main.f90  mpiinfo.f90  worker.f90
